<!--
  ~ Copyright (c) 2017 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!--General-->
    <string name="app_name">Lou</string>

    <!--Bottom Navigation-->
    <string name="bottom_nav_sample1">Profile</string>
    <string name="bottom_nav_sample2">Search</string>
    <string name="bottom_nav_sample3">Play</string>
    <string name="bottom_nav_sample4">Favorites</string>
    <string name="bottom_nav_sample5">Gallery</string>

    <!--Menu items-->
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <!--Navigation View items-->
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>

    <!--Navigation View-->
    <string name="navigation_view_header_title">Header</string>
    <string name="developer_name">Martin Pfeffer</string>
    <string name="developer_email">martin.pfeffer@celox.io</string>
    <string name="nav_drawer_open">open</string>
    <string name="nav_drawer_close">close</string>

</resources>
