<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/bottom_nav_sample1" />

    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/bottom_nav_sample2" />

    <item
        android:id="@+id/bottom_nav_play"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/bottom_nav_sample3" />

    <item
        android:id="@+id/bottom_nav_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/bottom_nav_sample4" />

    <item
        android:id="@+id/bottom_nav_gallery"
        android:icon="@drawable/ic_landscape_black_24dp"
        android:title="@string/bottom_nav_sample5" />

</menu>
